--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
+<h1>ASA Travelling R Workshop</h1>
 
 <a href="1.Getting.Started.html">1. Getting Started</a>
 <a href="2.Plotting.Data.html">2. Plotting Data</a>
