populating full web site

--- a/5.Shiny.html
+++ b/5.Shiny.html
@@ -970,6 +970,7 @@ hljs.initHighlightingOnLoad();
 <h1>Shiny</h1><p>Di Cook, Eric Hare<br/>5&#x2F;15-18&#x2F;2015</p>
 
 <div class="slideContent" >
+<div class="footer"> California Dreaming - ASA Travelling Workshop </div>
 
 </div>
 
