--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
 <frameset rows="150,*,100" frameborder="0" border="0" framespacing="0">
   <frame name="topNav" src="top_nav.html">
-<frameset cols="50%,50%" frameborder="0" border="0" framespacing="0">
+<frameset cols="40%,40%, 20%" frameborder="0" border="0" framespacing="0">
 	<frame name="notes" src="notes.html" marginheight="0" marginwidth="0" scrolling="auto" noresize>
 	<frame name="data" src="data.html" marginheight="0" marginwidth="0" scrolling="auto" noresize>
+	<frame name="data" src="software.html" marginheight="0" marginwidth="0" scrolling="auto" noresize>
 </frameset>
   <frame name="footer" src="footer.html">
 </frameset>
