styles not working

--- a/index.html
+++ b/index.html
@@ -4,15 +4,52 @@
 
 <head>ASA Travelling R Workshop</head>
 
-<frameset rows="150,*,100" frameborder="0" border="0" framespacing="0">
-  <frame name="topNav" src="top_nav.html">
-<frameset cols="40%,40%, 20%" frameborder="0" border="0" framespacing="0">
-	<frame name="notes" src="notes.html" marginheight="0" marginwidth="0" scrolling="auto" noresize>
-	<frame name="data" src="data.html" marginheight="0" marginwidth="0" scrolling="auto" noresize>
-	<frame name="data" src="software.html" marginheight="0" marginwidth="0" scrolling="auto" noresize>
-</frameset>
-  <frame name="footer" src="footer.html">
-</frameset>
+<h1>Software to install</h1>
+
+<ul>
+  <li> RStudio 0.98.1103
+  <li> R 3.2.0 "Full of Ingredients"
+</ul>
+
+R packages, and all of their dependencies
+
+<ul>
+  <li> rmarkdown, knitr
+  <li> devtools
+  <li> ggplot2
+  <li> tidyr, dplyr, lubridate
+  <li> dichromat, munsell, RColorBrewer, scales
+  <li> maps, ggmap, maptools, shapefiles, sp, rworldmap
+  <li> MASS
+  <li> shiny
+  <li> xtable
+</ul>
+
+<h1>Course Notes</h1>
+
+<p>These are the copies of the slides for the course. Notes are produced with RStudio presentation tools, and saved as html. Open the slides in a new browser window to better viewing. <p>
+
+<UL>
+<LI> <a href="1.Getting.Started.html" target="_blank">1. Getting Started</a> (<a href="1.Getting.Started.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="2.Plotting.Data.html" target="_blank">2. Plotting Data</a> (<a href="2.Plotting.Data.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="3.Rearranging.Data.html" target="_blank">3. Rearranging Data</a> (<a href="3.Rearranging.Data.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="4.Advanced.Plots.html" target="_blank">4. Advanced Plots</a> (<a href="4.Advanced.Plots.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="5.Shiny.html" target="_blank">5. Shiny</a> (<a href="5.Shiny.Rpres" target="_blank"> Rpres file</a>)
+</UL>
+
+<h1>Data</h1>
+<UL>
+<LI> <a href="data/oscars.csv"> oscars.csv </a>
+<LI> <a href="data/wiki-race.csv"> wiki-race.csv </a>
+<LI> <a href="data/hotel-cleaned.csv"> hotel-cleaned.csv </a>
+<LI> <a href="data/animal.csv"> animal.csv </a>
+<LI> <a href="data/billboard.csv"> billboard.csv </a>
+<LI> <a href="data/flights.csv"> flights.csv </a>
+<LI> <a href="data/states.health.stats.csv"> states.health.stats.csv </a>
+<LI> <a href="data/states.sex.stats.csv"> states.sex.stats.csv </a>
+<LI> <a href="data/states.stats.csv"> states.stats.csv </a>
+</UL>
+
 </html>
 
 </body>
