done with web site

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ R packages, and all of their dependencies
 <LI> <a href="data/states.stats.csv"> states.stats.csv </a>
 </UL>
 
+<a href="workshop.zip"> Zip'd up version of files and data </a>
 </html>
 
 </body>
