--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@ R packages, and all of their dependencies
   <li> xtable
 </ul>
 
+<a href="workshop.zip"> Zip'd up version of notes and data </a>
+
 <h1>Course Notes</h1>
 
 <p>These are the copies of the slides for the course. Notes are produced with RStudio presentation tools, and saved as html. Open the slides in a new browser window to better viewing. <p>
 
-<UL>
-<LI> <a href="1.Getting.Started.html" target="_blank">1. Getting Started</a> (<a href="1.Getting.Started.Rpres" target="_blank"> Rpres file</a>)
-<LI> <a href="2.Plotting.Data.html" target="_blank">2. Plotting Data</a> (<a href="2.Plotting.Data.Rpres" target="_blank"> Rpres file</a>)
-<LI> <a href="3.Rearranging.Data.html" target="_blank">3. Rearranging Data</a> (<a href="3.Rearranging.Data.Rpres" target="_blank"> Rpres file</a>)
-<LI> <a href="4.Advanced.Plots.html" target="_blank">4. Advanced Plots</a> (<a href="4.Advanced.Plots.Rpres" target="_blank"> Rpres file</a>)
-<LI> <a href="5.Shiny.html" target="_blank">5. Shiny</a> (<a href="5.Shiny.Rpres" target="_blank"> Rpres file</a>)
-</UL>
+<OL>
+<LI> <a href="1.Getting.Started.html" target="_blank"> Getting Started</a> (<a href="1.Getting.Started.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="2.Plotting.Data.html" target="_blank"> Plotting Data</a> (<a href="2.Plotting.Data.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="3.Rearranging.Data.html" target="_blank"> Rearranging Data</a> (<a href="3.Rearranging.Data.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="4.Advanced.Plots.html" target="_blank"> Advanced Plots</a> (<a href="4.Advanced.Plots.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="5.Shiny.html" target="_blank"> Shiny</a> (<a href="5.Shiny.Rpres" target="_blank"> Rpres file</a>)
+</OL>
 
 <h1>Data</h1>
 <UL>
@@ -50,7 +52,6 @@ R packages, and all of their dependencies
 <LI> <a href="data/states.stats.csv"> states.stats.csv </a>
 </UL>
 
-<a href="workshop.zip"> Zip'd up version of files and data </a>
 </html>
 
 </body>
