--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@ R packages, and all of their dependencies
 
 <h1>Data</h1>
 <UL>
-<LI> <a href="data/oscars.csv"> oscars.csv </a>
-<LI> <a href="data/wiki-race.csv"> wiki-race.csv </a>
-<LI> <a href="data/hotel-cleaned.csv"> hotel-cleaned.csv </a>
-<LI> <a href="data/animal.csv"> animal.csv </a>
-<LI> <a href="data/billboard.csv"> billboard.csv </a>
-<LI> <a href="data/flights.csv"> flights.csv </a>
-<LI> <a href="data/states.health.stats.csv"> states.health.stats.csv </a>
-<LI> <a href="data/states.sex.stats.csv"> states.sex.stats.csv </a>
-<LI> <a href="data/states.stats.csv"> states.stats.csv </a>
+<LI> <a href="data/oscars.csv" target="_blank"> oscars.csv </a>
+<LI> <a href="data/wiki-race.csv" target="_blank"> wiki-race.csv </a>
+<LI> <a href="data/hotel-cleaned.csv" target="_blank"> hotel-cleaned.csv </a>
+<LI> <a href="data/animal.csv" target="_blank"> animal.csv </a>
+<LI> <a href="data/billboard.csv" target="_blank"> billboard.csv </a>
+<LI> <a href="data/flights.csv" target="_blank"> flights.csv </a>
+<LI> <a href="data/states.health.stats.csv" target="_blank"> states.health.stats.csv </a>
+<LI> <a href="data/states.sex.stats.csv" target="_blank"> states.sex.stats.csv </a>
+<LI> <a href="data/states.stats.csv" target="_blank"> states.stats.csv </a>
 </UL>
 
 </html>
