--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ R packages, and all of their dependencies
 <p>These are the copies of the slides for the course. Notes are produced with RStudio presentation tools, and saved as html. Open the slides in a new browser window to better viewing. <p>
 
 <OL>
-<LI> <a href="1.Getting.Started.html" target="_blank"> Getting Started</a> (<a href="1.Getting.Started.Rpres" target="_blank"> Rpres file</a>)
-<LI> <a href="2.Plotting.Data.html" target="_blank"> Plotting Data</a> (<a href="2.Plotting.Data.Rpres" target="_blank"> Rpres file</a>)
-<LI> <a href="3.Rearranging.Data.html" target="_blank"> Rearranging Data</a> (<a href="3.Rearranging.Data.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="1.Getting.Started.html" target="_blank"> Getting Started</a> (<a href="1.Getting.Started.Rpres" target="_blank"> Rpres file</a>, <a href="1.Getting.Started.pdf" target="_blank"> pdf file</a>)
+<LI> <a href="2.Plotting.Data.html" target="_blank"> Plotting Data</a> (<a href="2.Plotting.Data.Rpres" target="_blank"> Rpres file</a>, <a href="2.Plotting.Data.pdf" target="_blank"> pdf file</a>)
+<LI> <a href="3.Rearranging.Data.html" target="_blank"> Rearranging Data</a> (<a href="3.Rearranging.Data.Rpres" target="_blank"> Rpres file</a>, <a href="3.Rearranging.Data.pdf" target="_blank"> pdf file</a>)
 <LI> <a href="4.Advanced.Plots.html" target="_blank"> Advanced Plots</a> (<a href="4.Advanced.Plots.Rpres" target="_blank"> Rpres file</a>)
 <LI> <a href="5.Shiny.html" target="_blank"> Shiny</a> (<a href="5.Shiny.Rpres" target="_blank"> Rpres file</a>)
 </OL>
