--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ R packages, and all of their dependencies
 <LI> <a href="1.Getting.Started.html" target="_blank"> Getting Started</a> (<a href="1.Getting.Started.Rpres" target="_blank"> Rpres file</a>, <a href="1.Getting.Started.pdf" target="_blank"> pdf file</a>)
 <LI> <a href="2.Plotting.Data.html" target="_blank"> Plotting Data</a> (<a href="2.Plotting.Data.Rpres" target="_blank"> Rpres file</a>, <a href="2.Plotting.Data.pdf" target="_blank"> pdf file</a>)
 <LI> <a href="3.Rearranging.Data.html" target="_blank"> Rearranging Data</a> (<a href="3.Rearranging.Data.Rpres" target="_blank"> Rpres file</a>, <a href="3.Rearranging.Data.pdf" target="_blank"> pdf file</a>)
-<LI> <a href="4.Advanced.Plots.html" target="_blank"> Advanced Plots</a> (<a href="4.Advanced.Plots.Rpres" target="_blank"> Rpres file</a>)
-<LI> <a href="5.Shiny.html" target="_blank"> Shiny</a> (<a href="5.Shiny.Rpres" target="_blank"> Rpres file</a>)
+<LI> <a href="4.Advanced.Plots.html" target="_blank"> Advanced Plots</a> (<a href="4.Advanced.Plots.Rpres" target="_blank"> Rpres file</a>, <a href="4.Advanced.Plots.pdf" target="_blank"> pdf file</a>)
+<LI> <a href="5.Shiny.html" target="_blank"> Shiny</a> (<a href="5.Shiny.Rpres" target="_blank"> Rpres file</a>, <a href="5.Shiny.pdf" target="_blank"> pdf file</a>)
 </OL>
 
 <h1>Data</h1>
